monitoring/alertmanager-discord.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager-discord
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager-discord
  template:
    metadata:
      labels:
        app: alertmanager-discord
    spec:
      containers:
        - name: alertmanager-discord
          image: benjojo/alertmanager-discord:latest
          ports:
            - containerPort: 9094
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-discord
  namespace: monitoring
spec:
  selector:
    app: alertmanager-discord
  ports:
    - port: 9094
      targetPort: 9094
